tests/baselines/reference/parserGenericsInVariableDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(1,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(2,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(4,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(5,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(7,9): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts(8,9): error TS2304: Cannot find name 'Foo'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInVariableDeclaration1.ts (6 errors) ====
    var v : Foo<T> = 1;
            ~~~~~~
!!! error TS2304: Cannot find name 'Foo'.
    var v : Foo<T>= 1;
            ~~~~~~
!!! error TS2304: Cannot find name 'Foo'.
    
    var v : Foo<Bar<T>> = 1;
            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Foo'.
    var v : Foo<Bar<T>>= 1;
            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Foo'.
    
    var v : Foo<Bar<Quux<T>>> = 1;
            ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Foo'.
    var v : Foo<Bar<Quux<T>>>= 1;
            ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Foo'.